--- a/config/env.example
+++ b/config/env.example
@@ -1,19 +1,18 @@
-# .env.example
-# Copy to .env and fill in your values
+# Copy this file to .env and fill in your values
 
-# API Authentication
-API_TOKEN=prod-secure-token-xyz789abc
+# API Authentication (REQUIRED)
+API_TOKEN=your-secure-api-token-here
 
-# Database (Railway will provide this automatically)
-DATABASE_URL=postgresql://user:password@host:port/database
+# Database (Railway provides this automatically)
+# DATABASE_URL=postgresql://user:password@host:port/database
 
-# Learning Record Store Configuration
+# Learning Record Store Configuration (OPTIONAL)
 LRS_ENDPOINT=https://your-lrs.com/xapi
 LRS_TOKEN=your-lrs-authentication-token
 
-# Webhook Configuration  
+# Webhook Configuration (OPTIONAL)
 WEBHOOK_ENDPOINT=https://your-webhook-endpoint.com/webhook
 WEBHOOK_TOKEN=your-webhook-authentication-token
 
-# Optional: Custom port (default is 8000)
+# Port (Railway sets this automatically)
 PORT=8000
