Clarify database URL example

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@
 API_TOKEN=prod-secure-token-xyz789abc
 
 # Database (Railway will provide this automatically)
-DATABASE_URL=postgresql://user:password@host:port/database
+# Replace placeholders with your database connection details
+DATABASE_URL=postgresql://user:password@host:5432/database
 
 # Learning Record Store Configuration
 LRS_ENDPOINT=https://your-lrs.com/xapi
