Add drive integration

--- a/config/env.example
+++ b/config/env.example
@@ -14,5 +14,9 @@ LRS_TOKEN=your-lrs-authentication-token
 WEBHOOK_ENDPOINT=https://your-webhook-endpoint.com/webhook
 WEBHOOK_TOKEN=your-webhook-authentication-token
 
+# Optional tokens for Drive integrations
+# GOOGLE_DRIVE_TOKEN=your-google-drive-token
+# ONEDRIVE_TOKEN=your-onedrive-token
+
 # Port (Railway sets this automatically)
 PORT=8000
